implement - _scan